# backcheck

./: .gitignore  README.md  pyproject.toml
backcheck/: __init__.py  cli.py  metrics.py  report.py
examples/: returns.csv
tests/: test_metrics.py
