[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "backcheck"
version = "0.1.0"
description = "Audit a trading-strategy backtest for the statistical sins that make it lie to you."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RomJ25" }]
keywords = ["backtesting", "quant", "sharpe-ratio", "overfitting", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
backcheck = "backcheck.cli:main"

[project.urls]
Homepage = "https://github.com/RomJ25/backcheck"
Issues = "https://github.com/RomJ25/backcheck/issues"

[tool.setuptools.packages.find]
include = ["backcheck*"]
